--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
     "next": "14.1.0",
+    "next-intl": "^3.9.4",
     "react": "^18",
     "react-dom": "^18"
   },
