espero que agora vá

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "prettier" // Enables eslint-plugin-prettier
   ],
   "rules": {
-    "prettier/prettier": "warn"// Or "error" if you prefer
+    "prettier/prettier": "warn",// Or "error" if you prefer
+    "eslint-disable-next-line": "off"
   }
 }
