--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "framer-motion": "^11.1.1",
     "next": "14.1.0",
     "next-intl": "^3.9.4",
     "react": "^18",
